--- a/views/new.erb
+++ b/views/new.erb
@@ -2,7 +2,7 @@
 
 <p>
   <form action="/method" method="POST">
-    <textarea class="form-control" placeholder="type your post here" rows="6"></textarea>
+    <textarea name="post" class="form-control" placeholder="type your post here" rows="6"></textarea>
     <br />
 
     <button type="submit" class="btn btn-primary">Submit</button>
