--- a/views/index.erb
+++ b/views/index.erb
@@ -4,6 +4,7 @@
    <h4><%= row['content'] %></h4>
   <p>
 <!--    дата поста-->
-    <%= row['create_date'] %>
+    <%= row['create_date'] %><br />
+    <a href="/post/<%= row['id'] %>"> Comments </a>
   </p>
 <% end%>
