--- a/views/index.erb
+++ b/views/index.erb
@@ -5,6 +5,6 @@
   <p>
 <!--    дата поста-->
     <%= row['create_date'] %><br />
-    <a href="/post/<%= row['id'] %>"> Comments </a>
+    <a href="/details/<%= row['id'] %>"> Comments </a>
   </p>
 <% end%>
