--- a/views/new.erb
+++ b/views/new.erb
@@ -1,7 +1,7 @@
-<h2>Add New Post from </h2>
+<h2>Add New Post form </h2>
 
 <p>
-  <form action="/method" method="POST">
+  <form action="/new" method="POST">
     <textarea name="post" class="form-control" placeholder="type your post here" rows="6"></textarea>
     <br />
 
