Add new field 'author' in the table Posts in DB
Ввели новое поле в БД и отобразили это поле в соответствующих представлениях, а также ввели форму для записи его. Также сделана валидация двух форм с выводом сообщения об этом. И запись имени автора в БД в поле 'author' в таблице 'Posts'

--- a/views/details.erb
+++ b/views/details.erb
@@ -1,10 +1,10 @@
 <h1>Post details:</h1>
 
+<h4> пишет <%= @row['author'] %></h4>
 <h4><%= @row['content'] %></h4>
 <p>
   <!--    дата поста-->
   <%= @row['create_date'] %><br />
-<!--  <a href="/details/<%#= row['id'] %>"> Comments </a>-->
 </p>
 
 <h3>Add New Comment </h3>
